ignore large files

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@
 data/ebd_IN_201303_202303_relAug-2023.txt
 data/ebd_filtered_WG.txt
 data/ebird_elev_residents_WG.csv
-*.tif
-*.tiff
+figs/*.tif
+data/*.tiff
